fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -2565,10 +2565,10 @@ input:checked + .notification__checkbox::before {
         width: fit-content;
         padding-left: 24px;
         padding-right: 24px;
-        margin-top: 20px;
+        margin-top: 24px;
     }
     .services-mainscreen__text {
-        gap: 10px;
+        gap: 6px;
     }
     .notification__main {
         padding: 0 30px;
